# fftmpi

./: CMakeLists.txt
src/: CMakeLists.txt  memory.cpp
